--- a/src/css/index.css
+++ b/src/css/index.css
@@ -38,3 +38,7 @@
   .gradient{
     background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
   }
+
+  .pub_titulo{
+    border-top: 1px solid black;
+  }
