--- a/src/css/index.css
+++ b/src/css/index.css
@@ -53,3 +53,9 @@
   body{
     font-family: 'Roboto', sans-serif;
   }
+
+  .contenedor_tareas{
+    font-size: 16px;
+    margin-left: 50px;
+    margin-bottom: 70px;
+  }
